Fixed colors and text align for contract

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
 
-  background-image: linear-gradient(to left top, #3f70b9, #4a8ecc, #62abdc, #82c8ea, #a7e4f9);
+  background-image: linear-gradient(to right, #005779, #004e7c, #00447d, #00397c, #182b77);
 }
 .navigator {
   background: #00274C;
